Created the side menu

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glassmorphism</title>
+    <script src="https://kit.fontawesome.com/299d4d9d9b.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
     <script src = "./index.js"></script>
 </head>
@@ -16,6 +20,39 @@
     <div class = "planet" id = "planet3"></div>
 
     <main>
+        <section class = "side-menu">
+            <div class = "center">
+                <img src="./img/avatar.png" alt="avatar" />
+                <p class = "avatar-name">Bob</p>
+            </div>
+
+            <a href = "#" class = "menu-item center">
+                <i class="fa-solid fa-chart-line"></i>
+                <p>Dashboard</p>
+            </a>
+            <a href = "#" class = "menu-item center">
+                <i class="fa-solid fa-money-bill"></i>
+                <p>Billing</p>
+            </a>
+            <a href = "#" class = "menu-item center">
+                <i class="fa-solid fa-circle-info"></i>
+                <p>Support</p>
+            </a>
+            <a href = "#" class = "menu-item center">
+                <i class="fa-solid fa-lock"></i>
+                <p>Security</p>
+            </a>
+            <a href = "#" class = "menu-item center">
+                <i class="fa-solid fa-microchip"></i>
+                <p>Engine</p>
+            </a>
+
+            <footer class = "center">
+                <a href="#">T&C</a>
+                <a href="#">Help</a>
+                <a href="#">About</a>
+            </footer>
+        </section>
     </main>
 </body>
 </html>
