Added the dashboard

--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
                 <a href="#">Help</a>
                 <a href="#">About</a>
             </footer>
+        </section
+        ><section class = "content">
+            <h1>Checkout</h1>
+            <p>Fill in the details and checkout securily in this glassmorphic design</p>
+
+            <form>
+                <label for = "name" class = "first">Name</label>
+                <input placeholder="Type your name..." type = "text" name = "name" />
+
+                <label for = "surname">Surname</label>
+                <input placeholder="Type your surname..." type = "text" name = "surname" />
+
+                <label for = "address">Address</label>
+                <input placeholder="Type your address..." type = "text" name = "address" />
+
+                <label for = "card">Card Number</label>
+                <input placeholder="You card number here..." type = "text" name = "card" />
+
+                <button>Submit</button>
+            </form>
         </section>
     </main>
 </body>
